--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-	"name": "migrator",
+	"name": "mongogrator",
 	"version": "1.0.0",
+	"description": "Mongogrator is a lightweight typescript-based package for MongoDB database migrations",
+  "author": "tepinly",
+  "license": "MIT",
 	"type": "commonjs",
 	"main": "dist/index.js",
 	"bin": {
