Updated package to include logo

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
 	"name": "mongogrator",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "Mongogrator is a lightweight typescript-based package for MongoDB database migrations",
-  "author": "tepinly",
-  "license": "MIT",
+	"author": "tepinly",
+	"license": "MIT",
 	"type": "commonjs",
 	"main": "dist/index.js",
 	"bin": {
 		"mongogrator": "./dist/index.js"
 	},
-	"files": ["dist"],
+	"files": ["dist", "assets"],
 	"scripts": {
 		"build": "tsc",
 		"dev": "tsc-watch"
