--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "./dist",
+    "rootDir": "./src",
     "module": "CommonJS",
     "target": "ES6",
     "esModuleInterop": true,
@@ -9,6 +10,6 @@
     "skipLibCheck": true
   },
   "include": [
-    "./index.ts"
+    "src/**/*.ts"
   ]
 }
