--- a/package.json
+++ b/package.json
@@ -34,5 +34,12 @@
 		"typescript": "^5.0.0",
 		"ts-node": "^10.9.2",
 		"mongodb": "^6.8.1"
-	}
+	},
+	"contributors": [
+		{
+			"name": "kerolloz",
+			"email": "contact@kerolloz.dev",
+			"url": "https://github.com/kerolloz"
+		}
+	]
 }
