--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "mongogrator",
-	"version": "1.1.2",
+	"version": "1.1.3",
 	"description": "Mongogrator is a lightweight typescript-based package for MongoDB database migrations",
 	"author": "tepinly",
 	"license": "MIT",
@@ -9,7 +9,11 @@
 	"bin": {
 		"mongogrator": "./dist/index.js"
 	},
-	"files": ["dist", "assets", "tsconfig.json"],
+	"files": [
+		"dist",
+		"assets",
+		"tsconfig.json"
+	],
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/tepinly/mongogrator.git"
@@ -31,9 +35,9 @@
 		"@types/bun": "latest"
 	},
 	"dependencies": {
-		"typescript": "^5.0.0",
+		"mongodb": "^6.8.1",
 		"ts-node": "^10.9.2",
-		"mongodb": "^6.8.1"
+		"typescript": "^5.0.0"
 	},
 	"maintainers": [
 		{
