--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 'lts' # Specify the Node.js version
+          node-version: '20' # Specify the Node.js version
 
       - name: Install dependencies
         run: npm install
