--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -19,10 +19,15 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20' # Specify the Node.js version
+          node-version: 20.x
 
       - name: Install dependencies
         run: npm install
 
+      - name: Build project
+        run: npm run build
+
+      - name: Run lint
+        run: npm run lint
       - name: Coveralls GitHub Action
         uses: coverallsapp/github-action@v2.3.0
