--- a/.github/workflows/main.ci.yml
+++ b/.github/workflows/main.ci.yml
@@ -7,7 +7,7 @@ on:
       - main
 
 jobs:
-  coverage:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,7 +27,6 @@ jobs:
           prerelease: false
           release_name: "Release ${{ github.ref }}"
           tag_name: ${{ github.ref }}
-          body_path: CHANGELOG.md
         env:
           GITHUB_TOKEN: ${{ github.token }}
 
