--- a/.github/workflows/main.ci.yml
+++ b/.github/workflows/main.ci.yml
@@ -26,7 +26,7 @@ jobs:
           draft: false
           prerelease: false
           release_name: "Release ${{ github.ref }}"
-          tag_name: ${{ github.ref }}
+          tag_name: "tst"
         env:
           GITHUB_TOKEN: ${{ github.token }}
 
