--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,17 @@
-"editor.codeActionsOnSave": {
-  "source.organizeImports.biome": "always",
-  "quickfix.biome": "explicit"
-},
-"[typescript]": {
-  "editor.defaultFormatter": "biomejs.biome"
-},
-"[json]": {
-  "editor.defaultFormatter": "biomejs.biome"
-}
+{
+  "editor.codeActionsOnSave": {
+    "source.organizeImports.biome": "always",
+    "quickfix.biome": "explicit",
+    "source.addMissingImports.ts": "always",
+    "source.removeUnusedImports": "always",
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  }
 }
