--- a/.github/workflows/tag.ci.yml
+++ b/.github/workflows/tag.ci.yml
@@ -22,11 +22,11 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            bin/mg-linux-arm64.tar.gz
-            bin/mg-linux.tar.gz
-            bin/mg-mac.tar.gz
-            bin/mg-mac-arm64.tar.gz
-            bin/mg-windows.zip
+            mongogrator-linux-arm64.tar.gz
+            mongogrator-linux.tar.gz
+            mongogrator-mac.tar.gz
+            mongogrator-mac-arm64.tar.gz
+            mongogrator-windows.zip
 
 
 
