--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   ],
   "scripts": {
     "make:macos": "rimraf bin/mongogrator && make macos-arm && mv bin/mongogrator-mac-arm64 bin/mongogrator",
+    "build": "tsc",
     "lint": "biome check ."
   },
   "devDependencies": {
