Added mongogrator installer to tag ci

--- a/.github/workflows/tag.ci.yml
+++ b/.github/workflows/tag.ci.yml
@@ -27,6 +27,4 @@ jobs:
             mongogrator-mac.tar.gz
             mongogrator-mac-arm64.tar.gz
             mongogrator-windows.zip
-
-
-
+            mongogrator-installer.sh
