Add windows script to tag release

--- a/.github/workflows/tag.ci.yml
+++ b/.github/workflows/tag.ci.yml
@@ -28,3 +28,4 @@ jobs:
             bin/mongogrator-mac-arm64.tar.gz
             bin/mongogrator-windows.zip
             mongogrator-installer.sh
+            mongogrator-installer.ps1
